# tube-emulator

./: .gitignore  CMakeLists.txt  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SpringReverb.h  ToneStack.h
tools/: reverb_check.cpp  sag_check.cpp  tonestack_check.cpp
